--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 #  Lists of individuals contributed content to the repository.
 
 - Mikiyas Abera <educationforlife424@gmail.com>
-- Hizkeal Bogale <hizkyb17@gmail.com>
+- Hizkeal Bogale <hizkealyb17@gmail.com>
+
+
